# fast-batch-image-utility

./: .gitattributes  .gitignore  BUILD_CHECK.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  COMPLIANCE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  build.bat  build_cli_only.bat
benchmark/: benchmark.py
include/: main_window.h
resources/: app.qrc
resources/translations/: app_en.qm  app_en.ts  app_fr.qm  app_fr.ts  app_ja.qm  app_ja.ts
src/: cli_main.cpp  gui_main.cpp  image_processor.cpp  image_processor.h  main_window.cpp  thread_pool.cpp  thread_pool.h
